# cryptopals-c

./: .gitignore  CMakeLists.txt  README.md
data/: 19.txt
include/: ch01_hex_base64.h  ch02_fixed_xor.h  ch03_single_byte_xor.h  ch04_detect_xor.h  ch05_repeating_xor.h  ch06_break_repeating_xor.h  ch07_aes_ecb.h  ch08_detect_ecb.h  ch09_pkcs7.h  ch10_aes_cbc.h  ch11_ecb_cbc_oracle.h  ch12_byte_ecb.h  ch13_ecb_cutpaste.h  ch14_byte_ecb_harder.h  ch15_pkcs7_validate.h  ch16_cbc_bitflip.h  ch17_padding_oracle.h  ch18_aes_ctr.h  ch19_fixed_nonce_ctr.h  ch20_break_fixed_nonce_ctr.h  ch21_mersenne_twister.h  ch22_mt_crack_seed.h  ch23_clone_mt19937.h  ch24_mt_stream_cipher.h
notes/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md  ch19.md  ch20.md  ch21.md  ch22.md  ch23.md  ch24.md
src/: ch01_hex_base64.c  ch02_fixed_xor.c  ch03_single_byte_xor.c  ch04_detect_xor.c  ch05_repeating_xor.c  ch06_break_repeating_xor.c  ch07_aes_ecb.c  ch08_detect_ecb.c  ch09_pkcs7.c  ch10_aes_cbc.c  ch11_ecb_cbc_oracle.c  ch12_byte_ecb.c  ch13_ecb_cutpaste.c  ch14_byte_ecb_harder.c  ch15_pkcs7_validate.c  ch16_cbc_bitflip.c  ch17_padding_oracle.c  ch18_aes_ctr.c  ch19_fixed_nonce_ctr.c  ch20_break_fixed_nonce_ctr.c  ch21_mersenne_twister.c  ch22_mt_crack_seed.c  ch23_clone_mt19937.c  ch24_mt_stream_cipher.c
tests/: test_ch01.cpp  test_ch02.cpp  test_ch03.cpp  test_ch04.cpp  test_ch05.cpp  test_ch06.cpp  test_ch07.cpp  test_ch08.cpp  test_ch09.cpp  test_ch10.cpp  test_ch11.cpp  (+13 more)
